feat(legal): implement final regulator-grade legal text in English and Arabic

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -106,7 +106,7 @@
                 <p data-i18n="privacy.s1.p2">By using our Apps or services, you consent to the collection, use, and
                     disclosure of your information
                     as described in this Privacy Policy. This policy complies with Qatar's Law No. 13 of 2016 on
-                    Personal Data Protection and Google Play's Developer Program Policies.</p>
+                    Personal Data Protection and Apple App Store Review Guidelines.</p>
             </article>
 
             <!-- Section 2 -->
@@ -126,6 +126,7 @@
                     <li data-i18n="privacy.s2.h1.item3"><strong>Vehicle Information:</strong> VIN (Vehicle
                         Identification Number), make, model, year for
                         parts matching</li>
+                    <li><strong>Location Information:</strong> Your delivery address, saved locations</li>
                     <li data-i18n="privacy.s2.h1.item4"><strong>Payment Information:</strong> Payment method preferences
                         (Cash on Delivery, Card)</li>
                     <li data-i18n="privacy.s2.h1.item5"><strong>Business Information (for Garages):</strong> Commercial
@@ -167,9 +168,9 @@
                         <li data-i18n="privacy.s2.h3.item4">Driver navigation and route optimization</li>
                     </ul>
                 </div>
-                <p data-i18n="privacy.s2.h3.disable">You may disable location services in your device settings, but this
-                    will significantly impact the
-                    functionality of our services including delivery fee calculation and order tracking.</p>
+                <p data-i18n="privacy.s2.h3.disable">You may disable location services in your device settings at any
+                    time. However, this will prevent core functionality including delivery services, garage matching,
+                    and order tracking.</p>
             </article>
 
             <!-- Section 3 -->
@@ -240,8 +241,7 @@
 
                 <h3 data-i18n="privacy.s4.h3">4.3 Legal Requirements</h3>
                 <p data-i18n="privacy.s4.h3.text">We may disclose your information when required by Qatar law, court
-                    orders, or government regulations,
-                    including compliance with Qatar's Law No. 13 of 2016 on Personal Data Protection.</p>
+                    orders, or government regulations.</p>
 
                 <div class="highlight-box gold">
                     <p data-i18n="privacy.s4.noSell"><strong>🔒 We do NOT sell your personal information to third
@@ -320,7 +320,8 @@
                         data processing</li>
                 </ul>
                 <p data-i18n="privacy.s7.contact">To exercise these rights, contact us at <a
-                        href="mailto:privacy@qscrap.qa">privacy@qscrap.qa</a>. We
+                        href="mailto:privacy@qscrap.qa">privacy@qscrap.qa</a> or through the in-app privacy request
+                    form. We
                     will respond within 30 days.</p>
             </article>
 
@@ -373,9 +374,9 @@
                     <h2 class="section-title" data-i18n="privacy.s11.title">International Data Transfers</h2>
                 </div>
                 <p data-i18n="privacy.s11.text">Your information may be transferred to and processed on servers located
-                    outside Qatar (e.g., cloud
-                    infrastructure in the UAE, Europe, or USA). We ensure appropriate safeguards are in place to protect
-                    your data in accordance with Qatar's Law No. 13 of 2016.</p>
+                    outside Qatar. We ensure appropriate safeguards are in place, including standard contractual
+                    clauses, binding corporate rules, or adequacy decisions as required by Qatar's data protection
+                    regulations.</p>
             </article>
 
             <!-- Section 12 -->
