--- a/public/terms.html
+++ b/public/terms.html
@@ -95,8 +95,8 @@
                     <div class="section-number" data-i18n="terms.s1.num">1</div>
                     <h2 class="section-title" data-i18n="terms.s1.title">Acceptance of Terms</h2>
                 </div>
-                <p data-i18n="terms.s1.p1">By downloading, accessing, or using the QScrap Customer App, QScrap Driver
-                    App, or any related
+                <p data-i18n="terms.s1.p1">By downloading, accessing, or using the QScrap Customer mobile application, QScrap Driver
+                    mobile application, website, or any related
                     services
                     ("the Platform"), you agree to be bound by these Terms of Service. If you disagree with any part of
                     these
@@ -136,7 +136,7 @@
                 </div>
                 <p data-i18n="terms.s3.intro">To use our services, you must:</p>
                 <ul>
-                    <li data-i18n="terms.s3.item1">Be at least 18 years old or the legal age in your jurisdiction</li>
+                    <li data-i18n="terms.s3.item1">Be at least 18 years old or the age of legal capacity in your jurisdiction</li>
                     <li data-i18n="terms.s3.item2">Provide accurate and complete registration information</li>
                     <li data-i18n="terms.s3.item3">Keep your account credentials secure and confidential</li>
                     <li data-i18n="terms.s3.item4">Accept responsibility for all activities under your account</li>
@@ -156,8 +156,8 @@
                 <ul>
                     <li data-i18n="terms.s4.item1">All prices are displayed in Qatari Riyal (QAR)</li>
                     <li data-i18n="terms.s4.item2">Delivery fees are calculated based on distance to your location</li>
-                    <li data-i18n="terms.s4.item3">Orders are binding once you accept a garage's bid</li>
-                    <li data-i18n="terms.s4.item4">Payment options include Cash on Delivery and Card payments</li>
+                    <li data-i18n="terms.s4.item3">Orders become legally binding contracts once you accept a garage's bid and confirm the order through the Platform</li>
+                    <li data-i18n="terms.s4.item4">Payment options include Cash on Delivery and Credit/Debit Card payments</li>
                     <li data-i18n="terms.s4.item5">Platform fees are transparently displayed before order confirmation
                     </li>
                     <li data-i18n="terms.s4.item6">Refunds are subject to our Cancellation and Refund Policy</li>
@@ -179,7 +179,7 @@
                 <ul>
                     <li data-i18n="terms.s5.item1">Part warranties are provided by individual garages through the QScrap
                         platform</li>
-                    <li data-i18n="terms.s5.item2">All parts carry a standard 7-day warranty from date of delivery</li>
+                    <li data-i18n="terms.s5.item2">All parts carry a standard 7-day warranty from date of delivery. After this period, warranty claims are at the discretion of the individual garage.</li>
                     <li data-i18n="terms.s5.item3">The 7-day warranty applies equally to new and used parts of all
                         conditions</li>
                     <li data-i18n="terms.s5.item4">Disputes must be raised within the 7-day warranty period</li>
@@ -253,9 +253,7 @@
                 <p data-i18n="terms.s9.p1">These Terms of Service are governed by the laws of the State of Qatar. Any
                     disputes arising from or
                     related to these terms or your use of the Platform shall be resolved in the courts of Qatar.</p>
-                <p data-i18n="terms.s9.p2">For complaints or concerns, please contact us first. We will attempt to
-                    resolve issues through our
-                    internal dispute resolution process before any legal action is taken.</p>
+                <p data-i18n="terms.s9.p2">Before initiating court proceedings, parties agree to attempt mediation through Qatar's Consumer Protection Department. For complaints or concerns, please contact us first.</p>
             </article>
 
             <!-- Company Contact Card -->
