--- a/public/request.html
+++ b/public/request.html
@@ -29,7 +29,7 @@
     <!-- Design System -->
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/customer-request.css">
+    <link rel="stylesheet" href="/css/customer-request.css?v=2.1">
 
     <!-- Spinner keyframe for btn -->
     <style>
@@ -403,7 +403,8 @@
                         <div class="crq-step-badge" style="background:var(--gold)">2</div>
                         <div>
                             <div class="crq-form-card-title" data-i18n="app.step2">Part Details</div>
-                            <div class="crq-form-card-desc" data-i18n="app.step2Desc">Describe the part you need — be specific for better bids
+                            <div class="crq-form-card-desc" data-i18n="app.step2Desc">Describe the part you need — be
+                                specific for better bids
                             </div>
                         </div>
                     </div>
@@ -418,17 +419,17 @@
                         </div>
                         <!-- Subcategory (hidden until category selected) -->
                         <div class="crq-form-group" id="crqSubcategoryGroup" style="display:none">
-                            <label class="crq-label" for="crqSubcategory" data-i18n="app.labelSubcategory">Subcategory <small
-                                    style="font-weight:400;color:var(--slate)">(optional)</small></label>
+                            <label class="crq-label" for="crqSubcategory" data-i18n="app.labelSubcategory">Subcategory
+                                <small style="font-weight:400;color:var(--slate)">(optional)</small></label>
                             <select class="crq-select" id="crqSubcategory">
                                 <option value="" data-i18n="app.selectSubcategory">— Select subcategory —</option>
                             </select>
                         </div>
                         <!-- Description -->
                         <div class="crq-form-group">
-                            <label class="crq-label" for="crqDesc" data-i18n="app.labelDesc">Description <span class="required">*</span></label>
-                            <textarea class="crq-textarea" id="crqDesc"
-                                data-i18n-placeholder="app.descPlaceholder"
+                            <label class="crq-label" for="crqDesc" data-i18n="app.labelDesc">Description <span
+                                    class="required">*</span></label>
+                            <textarea class="crq-textarea" id="crqDesc" data-i18n-placeholder="app.descPlaceholder"
                                 placeholder="Describe the part in detail. E.g.: Right front shock absorber for 2020 Toyota Camry 2.5L. Need genuine OEM or equivalent quality."
                                 maxlength="1000"></textarea>
                             <div class="crq-char-count" id="crqDescCount">0/1000</div>
@@ -437,13 +438,14 @@
                         <div style="display:grid;grid-template-columns:1fr auto;gap:16px;align-items:start"
                             class="crq-pnum-qty">
                             <div class="crq-form-group" style="margin-bottom:0">
-                                <label class="crq-label" for="crqPartNum">Part Number <small
-                                        style="font-weight:400;color:var(--slate)">(optional)</small></label>
+                                <label class="crq-label" for="crqPartNum" data-i18n="app.labelPartNum">Part Number
+                                    <small style="font-weight:400;color:var(--slate)">(optional)</small></label>
                                 <input class="crq-input" id="crqPartNum" type="text"
+                                    data-i18n-placeholder="app.partNumPlaceholder"
                                     placeholder="OEM or aftermarket part #" autocomplete="off">
                             </div>
                             <div class="crq-form-group" style="margin-bottom:0">
-                                <label class="crq-label">Quantity</label>
+                                <label class="crq-label" data-i18n="app.labelQuantity">Quantity</label>
                                 <div class="crq-qty-row">
                                     <button class="crq-qty-btn" id="crqQtyMinus" aria-label="Decrease quantity"
                                         disabled>−</button>
@@ -455,16 +457,18 @@
                         </div>
                         <!-- Condition -->
                         <div class="crq-form-group" style="margin-top:20px">
-                            <label class="crq-label">Part Condition Preference</label>
+                            <label class="crq-label" data-i18n="app.labelCondition">Part Condition Preference</label>
                             <div class="crq-condition-row">
-                                <button class="crq-condition-pill active" id="crqCondAny" data-value="any">
+                                <button class="crq-condition-pill active" id="crqCondAny" data-value="any"
+                                    data-i18n="app.condAny">
                                     <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                         stroke-width="2">
                                         <polyline points="20 6 9 17 4 12" />
                                     </svg>
                                     Any Condition
                                 </button>
-                                <button class="crq-condition-pill" id="crqCondNew" data-value="new">
+                                <button class="crq-condition-pill" id="crqCondNew" data-value="new"
+                                    data-i18n="app.condNew">
                                     <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                         stroke-width="2">
                                         <path
@@ -472,7 +476,8 @@
                                     </svg>
                                     New Only
                                 </button>
-                                <button class="crq-condition-pill" id="crqCondUsed" data-value="used">
+                                <button class="crq-condition-pill" id="crqCondUsed" data-value="used"
+                                    data-i18n="app.condUsed">
                                     <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                         stroke-width="2">
                                         <path
@@ -491,18 +496,32 @@
                     <div class="crq-form-card-header">
                         <div class="crq-step-badge" style="background:var(--success)">3</div>
                         <div>
-                            <div class="crq-form-card-title">Delivery Address <small
+                            <div class="crq-form-card-title" data-i18n="app.step3">Delivery Address <small
                                     style="font-weight:400;font-size:13px;color:var(--slate)">(optional)</small></div>
-                            <div class="crq-form-card-desc">Where should we deliver? Helps garages provide accurate
+                            <div class="crq-form-card-desc" data-i18n="app.step3Desc">Where should we deliver? Helps
+                                garages provide accurate
                                 delivery quotes</div>
                         </div>
                     </div>
                     <div class="crq-form-card-body">
+                        <!-- GPS Location -->
+                        <div class="crq-form-group">
+                            <button type="button" class="crq-gps-btn" id="crqBtnGps">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2.5">
+                                    <circle cx="12" cy="12" r="3" />
+                                    <path d="M12 2v3M12 19v3M2 12h3M19 12h3" />
+                                </svg>
+                                <span id="crqGpsBtnText">📍 Use my current location</span>
+                            </button>
+                            <div class="crq-gps-result" id="crqGpsResult" style="display:none"></div>
+                        </div>
                         <!-- Zone / Area dropdown -->
                         <div class="crq-form-group">
-                            <label class="crq-label">Area / Zone in Qatar</label>
+                            <label class="crq-label" data-i18n="app.labelAddress">Area / Zone in Qatar</label>
                             <div class="crq-searchable" id="crqZoneWrap">
                                 <input class="crq-input crq-search-input" id="crqZone" type="text"
+                                    data-i18n-placeholder="app.addressPlaceholder"
                                     placeholder="Search area… e.g. West Bay, Lusail, Al Wakra" autocomplete="off"
                                     role="combobox" aria-expanded="false" aria-autocomplete="list"
                                     aria-controls="crqZoneList">
@@ -515,10 +534,12 @@
                         </div>
                         <!-- Building / Street detail -->
                         <div class="crq-form-group" style="margin-bottom:0">
-                            <label class="crq-label" for="crqAddressDetail">Building / Street / Zone # <small
+                            <label class="crq-label" for="crqAddressDetail" data-i18n="app.labelAddress">Building /
+                                Street / Zone # <small
                                     style="font-weight:400;color:var(--slate)">(optional)</small></label>
                             <div class="crq-input-wrap">
                                 <input class="crq-input" id="crqAddressDetail" type="text"
+                                    data-i18n-placeholder="app.addressPlaceholder"
                                     placeholder="e.g. Building 42, Street 900, Zone 56" autocomplete="street-address">
                                 <svg class="crq-input-icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
                                     stroke="currentColor" stroke-width="2">
@@ -535,9 +556,10 @@
                     <div class="crq-form-card-header">
                         <div class="crq-step-badge" style="background:var(--charcoal)">4</div>
                         <div>
-                            <div class="crq-form-card-title">Photos <small
+                            <div class="crq-form-card-title" data-i18n="app.step4">Photos <small
                                     style="font-weight:400;font-size:13px;color:var(--slate)">(optional)</small></div>
-                            <div class="crq-form-card-desc">Upload up to 5 photos of the damaged part or area — helps
+                            <div class="crq-form-card-desc" data-i18n="app.step4Desc">Upload up to 5 photos of the
+                                damaged part or area — helps
                                 garages match exactly</div>
                         </div>
                     </div>
@@ -545,20 +567,22 @@
                         <div class="crq-photo-zone" id="crqPhotoZone" role="button" aria-label="Upload photos">
                             <input type="file" id="crqPhotoInput" accept="image/*" multiple aria-label="Select photos">
                             <div class="crq-photo-zone-icon">📷</div>
-                            <div class="crq-photo-zone-text">Click to upload or drag &amp; drop</div>
-                            <div class="crq-photo-zone-hint">JPG, PNG, WebP — up to 5 photos</div>
+                            <div class="crq-photo-zone-text" data-i18n="app.photoClick">Click to upload or drag &amp;
+                                drop</div>
+                            <div class="crq-photo-zone-hint" data-i18n="app.photoHint">JPG, PNG, WebP — up to 5 photos
+                            </div>
                         </div>
                         <div id="crqPhotoGrid" class="crq-photo-grid"></div>
                         <div style="text-align:right;font-size:12px;color:var(--slate-light);margin-top:8px"
-                            id="crqPhotoCount">0/5 photos</div>
+                            id="crqPhotoCount" data-i18n="app.photoCount">0/5 photos</div>
                     </div>
 
                     <!-- Submit bar inside last card -->
                     <div class="crq-submit-bar">
-                        <div class="crq-submit-hint">
+                        <div class="crq-submit-hint" data-i18n="app.submitHint">
                             <strong>Free to request.</strong> Garages compete for your business.
                         </div>
-                        <button class="crq-submit-btn" id="crqBtnSubmit" type="button">
+                        <button class="crq-submit-btn" id="crqBtnSubmit" type="button" data-i18n="app.submitBtn">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2.5">
                                 <line x1="22" y1="2" x2="11" y2="13" />
@@ -588,8 +612,8 @@
         <div class="crq-modal-backdrop" id="crqModalBackdrop"></div>
         <div class="crq-modal">
             <div class="crq-modal-header">
-                <h3 class="crq-modal-title" id="crqModalTitle">Request Details</h3>
-                <button class="crq-modal-close" id="crqModalClose" aria-label="Close modal">
+                <h3 class="crq-modal-title" id="crqModalTitle" data-i18n="app.modalTitle">Request Details</h3>
+                <button class="crq-modal-close" id="crqModalClose" aria-label="Close modal" data-i18n="app.closeModal">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                         stroke-width="2.5">
                         <line x1="18" y1="6" x2="6" y2="18" />
@@ -612,12 +636,17 @@
             <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap"
                 style="height:32px;filter:brightness(0) invert(1);opacity:0.7">
         </a>
-        <p style="margin-bottom:8px">© 2026 QScrap Services &amp; Trading L.L.C. — Doha, Qatar</p>
+        <p style="margin-bottom:8px" data-i18n="app.footerRights">© 2026 QScrap Services &amp; Trading L.L.C. — Doha,
+            Qatar</p>
         <div style="display:flex;gap:20px;justify-content:center;flex-wrap:wrap">
-            <a href="/terms.html" style="color:var(--slate-light);text-decoration:none">Terms of Service</a>
-            <a href="/privacy.html" style="color:var(--slate-light);text-decoration:none">Privacy Policy</a>
-            <a href="/refund.html" style="color:var(--slate-light);text-decoration:none">Refund Policy</a>
-            <a href="/partners.html" style="color:var(--slate-light);text-decoration:none">For Businesses</a>
+            <a href="/terms.html" style="color:var(--slate-light);text-decoration:none"
+                data-i18n="app.footerTerms">Terms of Service</a>
+            <a href="/privacy.html" style="color:var(--slate-light);text-decoration:none"
+                data-i18n="app.footerPrivacy">Privacy Policy</a>
+            <a href="/refund.html" style="color:var(--slate-light);text-decoration:none"
+                data-i18n="app.footerRefund">Refund Policy</a>
+            <a href="/partners.html" style="color:var(--slate-light);text-decoration:none"
+                data-i18n="app.footerPartners">For Businesses</a>
         </div>
     </footer>
 
@@ -625,7 +654,7 @@
      SCRIPTS
 ═══════════════════════════════════════════════════════════════════ -->
     <!-- Customer request logic -->
-    <script src="/js/customer-request.js" defer></script>
+    <script src="/js/customer-request.js?v=2.1" defer></script>
     <!-- Nav scroll + Mobile menu (self-contained, no main.js dependency) -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -645,7 +674,7 @@
             if (close) close.addEventListener('click', closeMenu);
             if (backdrop) backdrop.addEventListener('click', closeMenu);
             // Close on link click
-            document.querySelectorAll('.mobile-menu-link').forEach(function (l) { l.addEventListener('click', closeMenu); });
+            document.querySelectorAll('.mobile-menu-link').forEach(function (l) { l.addEventListener('click', clonu); });
         });
     </script>
 
