fix(web): resolve duplicated address labels from i18n
- Separate translation keys for Zone ('app.labelZone') and Street detail ('app.labelStreet')
- Stop both fields from rendering as 'Address in Qatar'
- Update English and Arabic dictionaries

--- a/public/request.html
+++ b/public/request.html
@@ -518,10 +518,10 @@
                         </div>
                         <!-- Zone / Area dropdown -->
                         <div class="crq-form-group">
-                            <label class="crq-label" data-i18n="app.labelAddress">Area / Zone in Qatar</label>
+                            <label class="crq-label" data-i18n="app.labelZone">Area / Zone in Qatar</label>
                             <div class="crq-searchable" id="crqZoneWrap">
                                 <input class="crq-input crq-search-input" id="crqZone" type="text"
-                                    data-i18n-placeholder="app.addressPlaceholder"
+                                    data-i18n-placeholder="app.zonePlaceholder"
                                     placeholder="Search area… e.g. West Bay, Lusail, Al Wakra" autocomplete="off"
                                     role="combobox" aria-expanded="false" aria-autocomplete="list"
                                     aria-controls="crqZoneList">
@@ -534,12 +534,12 @@
                         </div>
                         <!-- Building / Street detail -->
                         <div class="crq-form-group" style="margin-bottom:0">
-                            <label class="crq-label" for="crqAddressDetail" data-i18n="app.labelAddress">Building /
+                            <label class="crq-label" for="crqAddressDetail" data-i18n="app.labelStreet">Building /
                                 Street / Zone # <small
                                     style="font-weight:400;color:var(--slate)">(optional)</small></label>
                             <div class="crq-input-wrap">
                                 <input class="crq-input" id="crqAddressDetail" type="text"
-                                    data-i18n-placeholder="app.addressPlaceholder"
+                                    data-i18n-placeholder="app.streetPlaceholder"
                                     placeholder="e.g. Building 42, Street 900, Zone 56" autocomplete="street-address">
                                 <svg class="crq-input-icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
                                     stroke="currentColor" stroke-width="2">
