feat: add Last GPS Ping column to active deliveries table
- Color-coded GPS status: green (<5m), amber (5-30m), red (>30m), gray (no signal)
- Pulsing animation for live GPS connections
- Tooltip shows exact timestamp on hover
- Zero backend changes (already returns last_location_update)
- Replaces raw lat/lng coordinates with human-readable ping status

--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -706,12 +706,13 @@
                                         <th>Driver</th>
                                         <th>Customer</th>
                                         <th>Status</th>
+                                        <th>Last GPS Ping</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody id="activeDeliveriesTable">
                                     <tr>
-                                        <td colspan="5" class="empty-state">No active deliveries</td>
+                                        <td colspan="6" class="empty-state">No active deliveries</td>
                                     </tr>
                                 </tbody>
                             </table>
