feat(vvip): complete Phase 3 VVIP Premium Enhancements
- Implemented VVIP reveal animations and glass-card styling across all core pages.
- Updated sitemap.xml to include all 14 verified URLs.
- Standardized hreflang architecture using ?lang=ar query parameters.
- Enhanced all 5 location-specific pages with unique content.
- Implemented CSS minification and image lazy loading for performance.
- Centralized premium effects in vvip-premium.css.

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -11,7 +11,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/privacy">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/privacy">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/privacy">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/privacy?lang=ar">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/privacy">
 
     <!-- Fonts -->
