--- a/public/request.html
+++ b/public/request.html
@@ -9,7 +9,10 @@
     <meta name="description"
         content="Request any automotive spare part in Qatar. Compare bids from 50+ verified garages, pay securely, and get same-day delivery across Doha.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.qscrap.qa/request.html">
+    <link rel="canonical" href="https://www.qscrap.qa/request">
+    <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/request">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/request?lang=ar">
+    <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/request">
     <meta name="theme-color" content="#8D1B3D">
 
     <!-- Open Graph -->
