--- a/public/about.html
+++ b/public/about.html
@@ -24,7 +24,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/about">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/about">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/about">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/about?lang=ar">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/about">
 
     <!-- Favicon -->
