--- a/public/partners.html
+++ b/public/partners.html
@@ -24,7 +24,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/partners">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/partners">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/partners">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/partners?lang=ar">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/partners">
 
     <!-- Favicon -->
