--- a/public/refund.html
+++ b/public/refund.html
@@ -11,7 +11,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/refund">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/refund">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/refund">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/refund?lang=ar">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/refund">
 
     <!-- Fonts -->
