--- a/public/terms.html
+++ b/public/terms.html
@@ -11,7 +11,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/terms">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/terms">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/terms">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/terms?lang=ar">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/terms">
 
     <!-- Fonts -->
